[gd_scene load_steps=2 format=3 uid="uid://e2s5xorg7w4i"]

[ext_resource type="Script" path="res://Resources/Scripts/video_control.gd" id="1_m7ehl"]

[node name="video_control" type="Control" node_paths=PackedStringArray("v_sync_button", "framerate_button", "fullscreen_button")]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_m7ehl")
v_sync_button = NodePath("MarginContainer/VBoxContainer/vsync_option/CheckButton")
framerate_button = NodePath("MarginContainer/VBoxContainer/framerate_option/OptionButton")
fullscreen_button = NodePath("MarginContainer/VBoxContainer/resolution_option2/OptionButton")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 29.0
offset_right = 376.0
offset_bottom = 284.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="resolution_option" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(0, 68.28)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="resolution_label" type="Label" parent="MarginContainer/VBoxContainer/resolution_option"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Resolution            "

[node name="ResolutionOptions" type="OptionButton" parent="MarginContainer/VBoxContainer/resolution_option"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_vertical = 4

[node name="resolution_option2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 68.28)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="resolution_label" type="Label" parent="MarginContainer/VBoxContainer/resolution_option2"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "FULLSCREEN"
autowrap_mode = 3

[node name="OptionButton" type="OptionButton" parent="MarginContainer/VBoxContainer/resolution_option2"]
layout_mode = 2
size_flags_vertical = 4
item_count = 3
selected = 0
popup/item_0/text = "WINDOWED"
popup/item_0/id = 2
popup/item_1/text = "FULLSCREEN"
popup/item_1/id = 0
popup/item_2/text = "Borderless"
popup/item_2/id = 1

[node name="vsync_option" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 68.28)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="vsync_label" type="Label" parent="MarginContainer/VBoxContainer/vsync_option"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "V-Sync
"

[node name="CheckButton" type="CheckButton" parent="MarginContainer/VBoxContainer/vsync_option"]
layout_mode = 2

[node name="framerate_option" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 68.28)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="framerate_label" type="Label" parent="MarginContainer/VBoxContainer/framerate_option"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "MAX_FRAMERATE"

[node name="OptionButton" type="OptionButton" parent="MarginContainer/VBoxContainer/framerate_option"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_vertical = 4
item_count = 6
selected = 0
popup/item_0/text = "None"
popup/item_0/id = 0
popup/item_1/text = "30"
popup/item_1/id = 1
popup/item_2/text = "60"
popup/item_2/id = 2
popup/item_3/text = "90"
popup/item_3/id = 3
popup/item_4/text = "120"
popup/item_4/id = 4
popup/item_5/text = "144"
popup/item_5/id = 5

[connection signal="item_selected" from="MarginContainer/VBoxContainer/resolution_option/ResolutionOptions" to="." method="_on_resolution_button_item_selected"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer/resolution_option2/OptionButton" to="." method="_on_screen_options_selected"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/vsync_option/CheckButton" to="." method="_on_vsync_button_toggled"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer/framerate_option/OptionButton" to="." method="_on_framerate_max_selected"]
